welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{return (x >= 13 && x <= 19)}
 ^